# CS_Bachelor

BitJobs/: .gitignore  Konspekt.txt  README.md
BitJobs/bitjobs/: Gemfile  Procfile  manage.py  package.json  requirements.txt  webpack-stats.json  webpack.config.js
BitJobs/bitjobs/bargainflow/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
BitJobs/bitjobs/base/: urls.py  views.py
BitJobs/bitjobs/bitjobs/: settings.py  urls.py  wsgi.py
BitJobs/bitjobs/moneyflow/: forms.py  models.py
BitJobs/bitjobs/opinions/: forms.py  models.py  tests.py
year_I/IPP/: .gitignore  README.md
year_I/IPP/IPP/: CMakeLists.txt  Doxyfile.in  README.md  game.sh
year_I/IPP/IPP/src/: ai.c  ai.h  board.c  board.h  engine.c  engine.h  evaluatePosition.c  evaluatePosition.h  map.c  map.h  middle_ages.c  move.c  move.h  parse.c  parse.h  piece.c  piece.h  point.c  point.h  utils.h
year_I/IPP/IPP/tests/: middle_ages_tests.c
year_I/PO/zadanie2/: forum.xml
year_II/Algorithms_and_data_structures/: README.md
year_II/Algorithms_and_data_structures/exam/: easy.cpp  hard.cpp
year_II/Algorithms_and_data_structures/exercise/: heap_sort.cpp
year_II/Algorithms_and_data_structures/kap/: CMakeLists.txt  kap.cpp
year_II/Algorithms_and_data_structures/kin/: data  kin.cpp
year_II/Algorithms_and_data_structures/kre/: CMakeLists.txt  kre.cpp  segment_tree.h  test.cpp
year_II/Algorithms_and_data_structures/lex/: CMakeLists.txt  data1.in  lex.cpp
year_II/Algorithms_and_data_structures/mal/: mal.cpp
year_II/Algorithms_and_data_structures/mec/: mec.cpp  test_OK.in  test_WRONG.in
year_II/Algorithms_and_data_structures/par/: CMakeLists.txt  par.cpp
year_II/Algorithms_and_data_structures/prj/: CMakeLists.txt  prj.cpp
year_II/Algorithms_and_data_structures/sor/: sor.cpp
year_II/Algorithms_and_data_structures/starting/: baz.cpp  mat.cpp
year_II/Algorithms_and_data_structures/tan/: data.in  tan.cpp
year_II/Algorithms_and_data_structures/test/: gra.cpp  mro.cpp  odc.cpp  pad.cpp  par.cpp  pre.cpp  szy.cpp
year_II/AplikacjeWWW/: .gitignore  README.md
year_II/JNP/: README.md
year_II/JNP/zadanie1/: Makefile  (+1 more)
year_II/PW/zadanie3/: CMakeLists.txt  README  communication.c  communication.h  expression.c  expression.h  graph.c  graph.h  limits.h  main.c  parse.c  parse.h
year_II/PW/zadanie3/tests/: Zadanie3  adding_machine.in  adding_machine.out  calculator.in  calculator.out  example_test_2.in  example_test_2.out  example_test_3.in  example_test_err.in  example_test_err.out  example_test_err_no_x[0].in  example_test_err_no_x[0].out  example_test_ok.out  medium_test.in  medium_test.out  simple_add.in  simple_add.out  simple_equations.in  simple_equations.out  simple_multiply.in  simple_multiply.out  simple_test.in  simple_test.out  test.sh  very_simple_equation.in  very_simple_equation.out
year_II/SIK/: .gitignore  README.md
year_II/SO/: README.md
year_II/game-siktacka/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  communicate.cc  communicate.h  config.cc  config.h  debug.h  event.cc  game-state.cc  generator.cc  serialize.h  siktacka-client.cc  siktacka-server.cc  siktacka-server.h  start.sh  utils.cc
year_II/game-siktacka/gui3/: .gitignore  Makefile
year_II/game-siktacka/tests/: test_all.sh  test_command_line_args.sh  test_communicate.cc  test_generator.cc  test_utils.h
year_III/Algorithmics/: README.md
year_III/Berlin/: Makefile  README.md  grammar.bnfc
year_III/Fintech/: .gitignore  README.md  Readme.md
year_III/JNP_II/: README.md  docker-compose.yml  notify.env.template  stock_api.env.template  thresholdalert.env.template
year_III/Kwiatek_JNP3/: .gitignore  README.md  docker-compose.yml
year_III/RRZ/: README.md
year_III/Security_computer_systems/: README.md
year_III/Semantic_And_Program_Verification/: README.md
year_III/licencjat/: README.md  licencjat.tex  pracamgr.cls
(+664 files in other folders)
